--- a/welcome.html
+++ b/welcome.html
@@ -4,5 +4,7 @@
     <title>Welcome to HTML</title>
   </head>
   <body>
-    <h1> This is sample </h1>
+    <h1> This is Heading 1 </h1>
+    <h2> This is Heading 2 </h2>
+    <h3> This is Heading 3 </h3>
   </body>
