--- a/welcome.html
+++ b/welcome.html
@@ -6,5 +6,5 @@
   <body>
     <h1> This is Heading 1 </h1>
     <h2> This is Heading 2 </h2>
-    <h3> This is Heading 3 </h3>
+    <h3> Deleted heading </h3>
   </body>
